# src/controllers/authControllers/signupControllers/signupControllers.go
@@ -19,7 +19,7 @@ import (
 //	@Param			email	body		string						true	"Provide your email address"
 //
 //	@Success		200		{object}	signupService.signup1RespT	"Proceed to email verification"
-//	@Header			200		{array}		Set-Cookie					"Signup session response cookie"
+//	@Header			200		{string}	Set-cookie					"Signup session response cookie"
 //
 //	@Failure		400		{object}	appErrors.HTTPError			"An account with email already exists"
 //
@@ -64,16 +64,16 @@ func RequestNewAccount(c *fiber.Ctx) error {
 //	@Produce		json
 //
 //	@Param			code	body		string						true	"6-digit code"
-//	@Param			Cookie	header		[]string					true	"Signup session request cookie"
+//	@Param			Cookie	header		string						true	"Signup session request cookie"
 //
 //	@Success		200		{object}	signupService.signup2RespT	"Email verified"
-//	@Header			200		{array}		Set-Cookie					"Signup session response cookie"
+//	@Header			200		{string}	Set-cookie					"Signup session response cookie"
 //
 //	@Failure		400		{object}	appErrors.HTTPError			"Incorrect or expired verification code"
-//	@Header			400		{array}		Set-Cookie					"Signup session response cookie"
+//	@Header			400		{string}	Set-cookie					"Signup session response cookie"
 //
 //	@Failure		500		{object}	appErrors.HTTPError
-//	@Header			500		{array}		Set-Cookie	"Signup session response cookie"
+//	@Header			500		{string}	Set-cookie	"Signup session response cookie"
 //
 //	@Router			/auth/signup/verify_email [post]
 func VerifyEmail(c *fiber.Ctx) error {
@@ -118,16 +118,16 @@ func VerifyEmail(c *fiber.Ctx) error {
 //	@Param			password	body		string						true	"Choose a password"
 //	@Param			bio			body		string						false	"User bio (optional)"
 //
-//	@Param			Cookie		header		[]string					true	"Signup session request cookie"
+//	@Param			Cookie		header		string						true	"Signup session request cookie"
 //
 //	@Success		200			{object}	signupService.signup3RespT	"Signup Success"
-//	@Header			200			{array}		Set-Cookie					"User session response cookie containing auth JWT"
+//	@Header			200			{string}	Set-cookie					"User session response cookie containing auth JWT"
 //
 //	@Failure		400			{object}	appErrors.HTTPError			"Incorrect or expired verification code"
-//	@Header			400			{array}		Set-Cookie					"Signup session response cookie"
+//	@Header			400			{string}	Set-cookie					"Signup session response cookie"
 //
 //	@Failure		500			{object}	appErrors.HTTPError
-//	@Header			500			{array}		Set-Cookie	"Signup session response cookie"
+//	@Header			500			{string}	Set-cookie	"Signup session response cookie"
 //
 //	@Router			/auth/signup/register_user [post]
 func RegisterUser(c *fiber.Ctx) error {
